infrastructure/k8s/query.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: query-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: query

  template: # configuration for the pod
    metadata:
      labels:
        app: query

    spec:
      containers:
        - name: query
          image: gggfox/query:latest
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 4002
