infrastructure/k8s/comments.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: comments-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: comments

  template:
    metadata:
      labels:
        app: comments

    spec:
      containers:
        - name: comments
          image: gggfox/comments:latest
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 4001
---
apiVersion: v1
kind: Service
metadata:
  name: comments-service
spec:
  type: ClusterIP
  selector:
    app: comments
  ports:
    - name: comments
      protocol: TCP
      port: 4001 # Node port service port
      targetPort: 4001 # actual container port
