infrastructure/k8s/comments.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: comments-service
spec:
  type: ClusterIP
  selector:
    app: comments
  ports:
    - name: comments
      protocol: TCP
      port: 4001 # Node port service port
      targetPort: 4001 # actual container port
