infrastructure/k8s/event-bus.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: event-bus.service
spec:
  type: ClusterIP
  selector:
    app: event-bus
  ports:
    - name: event-bus
      protocol: TCP
      port: 4005 # Node port service port
      targetPort: 4005 # actual container port
