infrastructure/k8s/moderation.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: moderation-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: moderation # find all pods with this label

  template: # configuration for the pod
    metadata:
      labels:
        app: moderation

    spec:
      containers:
        - name: moderation
          image: gggfox/moderation:latest
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 4003
---
apiVersion: v1
kind: Service
metadata:
  name: moderation-service
spec:
  type: ClusterIP
  selector:
    app: moderation
  ports:
    - name: moderation
      protocol: TCP
      port: 4003 # Node port service port
      targetPort: 4003 # actual container port
