infrastructure/k8s/moderation.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: moderation-service
spec:
  type: ClusterIP
  selector:
    app: moderation
  ports:
    - name: moderation
      protocol: TCP
      port: 4003 # Node port service port
      targetPort: 4003 # actual container port
