infrastructure/k8s/posts.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: posts-service
spec:
  type: ClusterIP
  selector:
    app: posts
  ports:
    - name: posts
      protocol: TCP
      port: 4000 # Node port service port
      targetPort: 4000 # actual container port
