infrastructure/k8s/query.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: query-service
spec:
  type: ClusterIP
  selector:
    app: query
  ports:
    - name: query
      protocol: TCP
      port: 4002 # Node port service port
      targetPort: 4002 # actual container port
