infrastructure/k8s/todos.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todos-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todos # find all pods with this label

  template: # configuration for the pod
    metadata:
      labels:
        app: todos

    spec:
      containers:
        - name: todos
          image: gggfox/todos:latest
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 3200
---
apiVersion: v1
kind: Service
metadata:
  name: todos-service
spec:
  type: ClusterIP
  selector:
    app: todos
  ports:
    - name: todos
      protocol: TCP
      port: 3200
      targetPort: 3200
